# N-dimension-engine

./: README.md
Computer graphics project/: CMakeLists.txt  README.md  main.cpp
Computer graphics project/Engine/: CMakeLists.txt  EventSystem.h
Computer graphics project/config/: default.h
Computer graphics project/lib/Engine/: Entities.h  RayCast.h
Computer graphics project/lib/Exceptions/: engine_exceptions.h  math_exceptions.cpp
Computer graphics project/lib/Math/: base.h
Computer graphics project/test/Math_tests/: CMakeLists.txt  testing.cpp
